chore: refactor the primary matrix generating function

--- a/Direct Stiffness/large_StructureAnalysis.ipynb
+++ b/Direct Stiffness/large_StructureAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,26 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2]\n",
-      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+      "[1, 2]\n"
      ]
     }
    ],
@@ -112,10 +100,25 @@
     "    Returns:\n",
     "    numpy.ndarray: A nDof x nDof primary stiffness matrix for the structure.\n",
     "    \"\"\"\n",
-    "    Prime_Stiffness = np.zeros((nDof,nDof))\n",
-    "    return Prime_Stiffness    \n",
+    "    prime = np.zeros((nDof, nDof))\n",
+    "    for i in range(0, nDof, 2): # index of rows\n",
+    "        for j in range(0, nDof, 2): # index of columns \n",
+    "            dummy_quadrant = np.zeros((2,2))\n",
+    "            for elm in Elms:\n",
+    "                if i/2 == j/2 and i/2 == elm['node'][0]:\n",
+    "                    dummy_quadrant += elm['quadrants'][Quadrants['Q11']]\n",
+    "                \n",
+    "                elif i/2 == j/2 and i/2 == elm['node'][1]:\n",
+    "                    dummy_quadrant += elm['quadrants'][Quadrants['Q22']]\n",
     "\n",
-    "print(structure_primaryStiffness(nDof, 1))"
+    "                elif i/2 == elm['node'][0] and j/2 == elm['node'][1]:\n",
+    "                    dummy_quadrant += elm['quadrants'][Quadrants['Q12']]\n",
+    "                \n",
+    "                elif i/2 == elm['node'][1] and j/2 == elm['node'][0]:\n",
+    "                    dummy_quadrant += elm['quadrants'][Quadrants['Q21']]\n",
+    "\n",
+    "                prime[i:i+2, j:j+2] = dummy_quadrant\n",
+    "    return prime"
    ]
   },
   {
@@ -154,14 +157,12 @@
     "    Q12 = elm['global_stiffness'][:2, 2:]\n",
     "    Q21 = elm['global_stiffness'][2:, :2]\n",
     "    Q22 = elm['global_stiffness'][2:, 2:]\n",
-    "    elm['quadrants'] = [Q11, Q12, Q21, Q22]\n",
-    "\n",
-    "prime = np.zeros((nDof, nDof))\n"
+    "    elm['quadrants'] = [Q11, Q12, Q21, Q22]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -184,25 +185,8 @@
     }
    ],
    "source": [
-    "for i in range(0, nDof, 2): # index of rows\n",
-    "    for j in range(0, nDof, 2): # index of columns \n",
-    "        dummy_quadrant = np.zeros((2,2))\n",
-    "        for elm in ELM_ARR:\n",
-    "            if i/2 == j/2 and i/2 == elm['node'][0]:\n",
-    "                dummy_quadrant += elm['quadrants'][Quadrants['Q11']]\n",
-    "            \n",
-    "            elif i/2 == j/2 and i/2 == elm['node'][1]:\n",
-    "                dummy_quadrant += elm['quadrants'][Quadrants['Q22']]\n",
-    "\n",
-    "            elif i/2 == elm['node'][0] and j/2 == elm['node'][1]:\n",
-    "                dummy_quadrant += elm['quadrants'][Quadrants['Q12']]\n",
-    "            \n",
-    "            elif i/2 == elm['node'][1] and j/2 == elm['node'][0]:\n",
-    "                dummy_quadrant += elm['quadrants'][Quadrants['Q21']]\n",
-    "\n",
-    "            prime[i:i+2, j:j+2] = dummy_quadrant\n",
-    "\n",
-    "print(np.round(prime, 2))     \n"
+    "prime_matrix = structure_primaryStiffness(nDof, ELM_ARR)\n",
+    "print(np.round(prime_matrix,2))\n"
    ]
   }
  ],
