--- a/Direct Stiffness/large_StructureAnalysis.ipynb
+++ b/Direct Stiffness/large_StructureAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +118,7 @@
     "                    dummy_quadrant += elm['quadrants'][Quadrants['Q21']]\n",
     "\n",
     "                prime[i:i+2, j:j+2] = dummy_quadrant\n",
+    "                \n",
     "    return prime"
    ]
   },
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,6 +188,45 @@
    "source": [
     "prime_matrix = structure_primaryStiffness(nDof, ELM_ARR)\n",
     "print(np.round(prime_matrix,2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.13  0.04 -0.03 -0.04  0.    0.    0.    0.   -0.1   0.    0.    0.  ]\n",
+      " [ 0.04  0.08 -0.04 -0.08  0.    0.    0.    0.    0.    0.    0.    0.  ]\n",
+      " [-0.03 -0.04  0.15  0.   -0.1   0.    0.    0.   -0.03  0.04  0.    0.  ]\n",
+      " [-0.04 -0.08  0.    0.15  0.    0.    0.    0.    0.04 -0.08  0.    0.  ]\n",
+      " [ 0.    0.   -0.1   0.    0.15  0.    0.    0.   -0.03 -0.04  0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.15  0.    0.   -0.04 -0.07  0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.  ]\n",
+      " [-0.1   0.   -0.03  0.04 -0.03 -0.04  0.    0.    0.25  0.    0.    0.  ]\n",
+      " [ 0.    0.    0.04 -0.08 -0.04 -0.07  0.    0.    0.    0.35  0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "structure_matrix = np.copy(prime_matrix)\n",
+    "\n",
+    "for i in range(nDof):\n",
+    "    for j in range(nDof):\n",
+    "        if i in restraint_nDof and i != j:\n",
+    "            structure_matrix[i,j] = 0\n",
+    "        elif j in restraint_nDof and i != j:\n",
+    "            structure_matrix[i,j] = 0\n",
+    "        elif i == j and i in restraint_nDof:\n",
+    "            structure_matrix[i,j] = 1  \n",
+    "\n",
+    "print(np.round(structure_matrix,2)) "
    ]
   }
  ],
