--- a/Direct Stiffness/large_StructureAnalysis.ipynb
+++ b/Direct Stiffness/large_StructureAnalysis.ipynb
@@ -9,24 +9,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[      0.]\n",
+      " [-200000.]\n",
+      " [      0.]\n",
+      " [      0.]\n",
+      " [      0.]\n",
+      " [      0.]\n",
+      " [      0.]\n",
+      " [      0.]\n",
+      " [      0.]\n",
+      " [      0.]\n",
+      " [      0.]\n",
+      " [      0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
     "\n",
     "# constants\n",
-    "E =  1 #200*10**9 #(N/m^2) \n",
-    "A =  1 #0.005 #(m^2) \n",
+    "E =  200*10**9 #(N/m^2) \n",
+    "A =  0.005 #(m^2) \n",
     "L = 10 #1 #(m)\n",
     "\n",
     "# degree of freedom\n",
     "nodes = 6\n",
     "nDof = nodes * 2\n",
     "\n",
-    "\n",
+    "# force vector\n",
+    "forces = np.zeros((nDof,1))\n",
+    "forces[1] = -200000\n",
+    "print(forces)\n",
     "# restraint nodes\n",
     "restraint_nDof = [6,7,10,11]\n",
     "\n",
@@ -48,17 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def bar_globalstiffness(E, A, L, theta, node1, node2, tag):\n",
     "    \"\"\"\n",
@@ -87,9 +101,6 @@
     "        'global_stiffness' : K\n",
     "    }\n",
     "    return element\n",
-    "\n",
-    "elm_1 = bar_globalstiffness(E, A, L, 60, 1, 2, A)\n",
-    "print(elm_1[\"node\"])\n",
     "\n",
     "def structure_primaryStiffness (nDof, Elms):\n",
     "    \"\"\"\n",
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,70 +174,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.13  0.04 -0.03 -0.04  0.    0.    0.    0.   -0.1   0.    0.    0.  ]\n",
-      " [ 0.04  0.08 -0.04 -0.08  0.    0.    0.    0.    0.    0.    0.    0.  ]\n",
-      " [-0.03 -0.04  0.15  0.   -0.1   0.    0.    0.   -0.03  0.04  0.    0.  ]\n",
-      " [-0.04 -0.08  0.    0.15  0.    0.    0.    0.    0.04 -0.08  0.    0.  ]\n",
-      " [ 0.    0.   -0.1   0.    0.15  0.   -0.03  0.04 -0.03 -0.04  0.    0.  ]\n",
-      " [ 0.    0.    0.    0.    0.    0.15  0.04 -0.08 -0.04 -0.07  0.    0.  ]\n",
-      " [ 0.    0.    0.    0.   -0.03  0.04  0.13 -0.04 -0.1   0.    0.    0.  ]\n",
-      " [ 0.    0.    0.    0.    0.04 -0.08 -0.04  0.08  0.   -0.    0.    0.  ]\n",
-      " [-0.1   0.   -0.03  0.04 -0.03 -0.04 -0.1   0.    0.25  0.   -0.   -0.  ]\n",
-      " [ 0.    0.    0.04 -0.08 -0.04 -0.07  0.   -0.    0.    0.35 -0.   -0.2 ]\n",
-      " [ 0.    0.    0.    0.    0.    0.    0.    0.   -0.   -0.    0.    0.  ]\n",
-      " [ 0.    0.    0.    0.    0.    0.    0.    0.   -0.   -0.2   0.    0.2 ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prime_matrix = structure_primaryStiffness(nDof, ELM_ARR)\n",
-    "print(np.round(prime_matrix,2))\n"
+    "# print(np.round(prime_matrix,2))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_matrix = np.copy(prime_matrix)\n",
+    "\n",
+    "for i in restraint_nDof:    \n",
+    "    for j in range(nDof):\n",
+    "        if i in restraint_nDof and i != j:\n",
+    "            structure_matrix[i,j] = 0\n",
+    "            structure_matrix[j,i] = 0\n",
+    "        elif i in restraint_nDof and i == j:\n",
+    "            structure_matrix[i,j] = 1\n",
+    "\n",
+    "# print(np.round(structure_matrix,2))\n",
+    "\n",
+    "forces_restraint = np.delete(forces, restraint_nDof, axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.13  0.04 -0.03 -0.04  0.    0.    0.    0.   -0.1   0.    0.    0.  ]\n",
-      " [ 0.04  0.08 -0.04 -0.08  0.    0.    0.    0.    0.    0.    0.    0.  ]\n",
-      " [-0.03 -0.04  0.15  0.   -0.1   0.    0.    0.   -0.03  0.04  0.    0.  ]\n",
-      " [-0.04 -0.08  0.    0.15  0.    0.    0.    0.    0.04 -0.08  0.    0.  ]\n",
-      " [ 0.    0.   -0.1   0.    0.15  0.    0.    0.   -0.03 -0.04  0.    0.  ]\n",
-      " [ 0.    0.    0.    0.    0.    0.15  0.    0.   -0.04 -0.07  0.    0.  ]\n",
-      " [ 0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.  ]\n",
-      " [ 0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.  ]\n",
-      " [-0.1   0.   -0.03  0.04 -0.03 -0.04  0.    0.    0.25  0.    0.    0.  ]\n",
-      " [ 0.    0.    0.04 -0.08 -0.04 -0.07  0.    0.    0.    0.35  0.    0.  ]\n",
-      " [ 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.  ]\n",
-      " [ 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.  ]]\n"
+      "the horizontal displacement of node 1 is 0.002 m (⇒)\n",
+      "the vertical displacement of node 1 is -0.019 m (⇓) \n",
+      "\n",
+      "the horizontal displacement of node 2 is -0.008 m (⇐)\n",
+      "the vertical displacement of node 2 is -0.01 m (⇓) \n",
+      "\n",
+      "the horizontal displacement of node 3 is -0.006 m (⇐)\n",
+      "the vertical displacement of node 3 is -0.001 m (⇓) \n",
+      "\n",
+      "the horizontal displacement of node 4 is 0.0 m (⇐)\n",
+      "the vertical displacement of node 4 is 0.0 m (⇑) \n",
+      "\n",
+      "the horizontal displacement of node 5 is 0.001 m (⇒)\n",
+      "the vertical displacement of node 5 is -0.002 m (⇓) \n",
+      "\n",
+      "the horizontal displacement of node 6 is 0.0 m (⇐)\n",
+      "the vertical displacement of node 6 is 0.0 m (⇑) \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "structure_matrix = np.copy(prime_matrix)\n",
+    "# displacement\n",
+    "displacement = np.linalg.solve(structure_matrix, forces)\n",
     "\n",
-    "for i in range(nDof):\n",
-    "    for j in range(nDof):\n",
-    "        if i in restraint_nDof and i != j:\n",
-    "            structure_matrix[i,j] = 0\n",
-    "        elif j in restraint_nDof and i != j:\n",
-    "            structure_matrix[i,j] = 0\n",
-    "        elif i == j and i in restraint_nDof:\n",
-    "            structure_matrix[i,j] = 1  \n",
+    "for i in range(0, nDof, 2):\n",
+    "    print(f\"the horizontal displacement of node {i//2 + 1} is {np.round(displacement[i,0],3)} m {'(⇒)' if displacement[i,0] > 0 else '(⇐)'}\")\n",
+    "    print(f\"the vertical displacement of node {i//2 + 1} is {np.round(displacement[i+1,0],3)} m {'(⇓)' if displacement[i+1,0] < 0 else '(⇑)' }\",'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the horizontal reaction of node 1 is 0.0 N (⇒)\n",
+      "the vertical reaction of node 1 is -200000.0 N (⇓) \n",
+      "\n",
+      "the horizontal reaction of node 2 is -0.0 N (⇐)\n",
+      "the vertical reaction of node 2 is 0.0 N (⇑) \n",
+      "\n",
+      "the horizontal reaction of node 3 is 0.0 N (⇒)\n",
+      "the vertical reaction of node 3 is -0.0 N (⇓) \n",
+      "\n",
+      "the horizontal reaction of node 4 is -0.0 N (⇐)\n",
+      "the vertical reaction of node 4 is -200000.0 N (⇓) \n",
+      "\n",
+      "the horizontal reaction of node 5 is -0.0 N (⇐)\n",
+      "the vertical reaction of node 5 is -0.0 N (⇓) \n",
+      "\n",
+      "the horizontal reaction of node 6 is 0.0 N (⇒)\n",
+      "the vertical reaction of node 6 is 400000.0 N (⇑) \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "reactions = np.dot(prime_matrix, displacement)\n",
     "\n",
-    "print(np.round(structure_matrix,2)) "
+    "for i in range(0, nDof, 2):\n",
+    "    print(f\"the horizontal reaction of node {i//2 + 1} is {np.round(reactions[i,0],3)} N {'(⇒)' if reactions[i,0] > 0 else '(⇐)'}\")\n",
+    "    print(f\"the vertical reaction of node {i//2 + 1} is {np.round(reactions[i+1,0],3)} N {'(⇓)' if reactions[i+1,0] < 0 else '(⇑)' }\",'\\n')"
    ]
   }
  ],
